2011-01-28  Karel Klíč  <kklic@redhat.com>

	* gui_textitems.py: Fixed the text methods of all classes.

	* gui_settings_informationbox.py: Implemented method
	itemListFromWidget.

	* gui_settings_textualdata.py: Renamed to
	gui_settings_informationbox.py.

	* gui_menubar.py (MenuBar.__init__): Remove "Show name", "Show
	measurement date", "Show model name", "Show rate constant", "Show
	A0" checkboxes. The visibility and order of lines can now be
	changed in Settings->Information Box.

	* gui_informationtable.py (InformationTable.textFromData): Use
	textItems instead of hard-coded lines.

2010-08-31  Karel Klíč  <kklic@redhat.com>

	* variables.py: New variable legendTable.

	* gui_textitems.py: New file.

	* gui_settings_textualdata.py (Dialog.createBox): New UI.

	* gui_mainwindow.py (MainWindow.__init__): Initialize the new
	variable textItems.

2010-07-23  Karel Klíč  <kklic@redhat.com>

	* gui_informationtable.py: Removed trailing whitespaces.

	* gui_graphicsscene.py: Removed trailing whitespaces.

	* gui_mainwindow.py (MenuBarWithActions.openRecentFile): Call
	parent's loadFile method. Makes recent files to work again.

	* NEWS: Include recent changes.

	* gui_settings_bars.py (Dialog): New dialog.

	* gui_settings_axes.py (Dialog): New dialog.

	* gui_appearance.py (Appearance): Moved most of the code to
	gui_settings_axes.py and gui_settings_bars.py.  Renamed the file
	to gui_settings_textualdata.py and renamed the class to
	Dialog.

	* gui_mainwindow.py: Removed trailing whitespaces.
	(MenuBarWithActions): New class representing the menu bar with
	menu actions implemented.  This class knows both the menu bar
	class and the main window class and serves as a bridge between
	them.

	* gui_menubar.py (MenuBar.__init__): Renamed Edit menu entry to
	Settings.  Added Settings->Axes and Settings->Bars.

	* gui_settings.py: Removed trailing whitespaces.

	* variables.py: Added new variables fullLightBarsVisible and