@@ -3,7 +3,7 @@ FlashFit
 
 FlashFit interpretes data measured by oscilloscope.
 
-Homepage: http://forge.klic.name/projects/flashfit/
+Homepage: http://klic.name/computer/flashfit
 
 ** Nonnegative least squares
 One solution:
