@@ -1,5 +1,5 @@
 == FlashFit 0.7
-Not yet released.
+Released 2011-01-29.
 
 - Improved and extended settings. The Appearance Dialog was splitted
   into multiple smaller and more detailed dialogs.
